<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        tools:targetApi="M">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:hint="@string/task_name"
            android:inputType="text"
            tools:ignore="TextFields"
            tools:targetApi="M" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        tools:targetApi="M">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:hint="@string/task_description"
            android:inputType="text"
            tools:ignore="TextFields"
            tools:targetApi="M"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Switch
        android:id="@+id/swt_completed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/completed"
        android:textColor="@android:color/darker_gray"
        android:textSize="16sp"
        tools:targetApi="M" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/save"
        android:fontFamily="sans-serif-smallcaps"
        tools:targetApi="M" />

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:text="@string/delete"
        android:fontFamily="sans-serif-smallcaps"
        android:visibility="gone"
        tools:targetApi="M" />


</LinearLayout>